Latest news from hosting.

--- a/text/news
+++ b/text/news
@@ -2,6 +2,24 @@
                                 СИСТЕМА НОВОСТЕЙ 
                                 МПМ "Грани Мира"
 ================================================================================
+Дата: 30/09/2018
+* Убраны штрафы, когда чар голоден или хочет пить.
+* Теперь вода восстанавливает часть энергии, а еда часть жизней.
+* Добавлена команда гдея
+* Добавлена команда карта, которая отображает небольшую миникарту
+* Добавлен режим миникарта
+
+Дата: 20/09/2018
+Новости за последний месяц, в произвольном порядке:
+* Добавлен режим 'маппер', при котором отображаются номера комнат
+* Улучшены начальные параметры персонажей
+* Починена выдача начальной экипировки
+* Убрана задержка на перемещение между комнатами
+* Изменена выдача опыта в группе
+* Восстановлен вывод команды 'справка' (без аргументов)
+* Убиты некоторые краши, добавлены новые
+
+
 Дата: 23/10/2015
 Молитва отторжение теперь пускает в комнату существ согрупников.
 Добавлен набор предмотов для плута и злого жреца или колдуна.
